--- a/ultimate-tic-tac-toe/src/components/GameMode.css
+++ b/ultimate-tic-tac-toe/src/components/GameMode.css
@@ -1,6 +1,6 @@
 /*================== Container (Game Section) ==================*/
 .gameMode {    
-    
+    margin: auto;
 }
 
 .gameMode button {
