--- a/ultimate-tic-tac-toe/src/components/GamePanel.css
+++ b/ultimate-tic-tac-toe/src/components/GamePanel.css
@@ -39,7 +39,7 @@
   background-color: red;
 }
 
-.playX {
+.X {
   background: url("../../public/x.png") no-repeat center;
   background-size: 2em;
   background-color: #ccc;
@@ -47,7 +47,7 @@
   transform: rotate(180deg);
 }
 
-.playO {
+.O {
   background: url("../../public/o.png") no-repeat center;
   background-size: 3.5em;
   background-color: #ccc;
@@ -75,7 +75,7 @@
   width: 33%;
 }
 
-.playersInfo p:first-child {
+.playersInfo .title {
   font-weight: 900;
   font-size: larger;
 }
@@ -95,11 +95,11 @@ main {
     transition: 1s;
   }
 
-  .playX {
+  .X {
     background-size: 1.65em;
   }
 
-  .playO {
+  .O {
     background-size: 3em;
   }
 }
@@ -118,22 +118,35 @@ main {
   }
 
   .playersInfo {
-    margin: auto 2em;
+    display: flex;
+    flex-direction: row;
+    width: auto;
   }
 
   .playersInfo p {
     font-size: 1em;
   }
 
-  .playersInfo p:first-child {
+  .playersInfo .title {
     font-size: 1.1em;
   }
 
-  .playX {
+  .X {
     background-size: 1.4em;
   }
 
-  .playO {
+  .O {
     background-size: 2.6em;
+  }
+
+  .container {
+    width: 100%;
+    height: 100%;
+    padding: 1em;
+    margin: auto;
+  }
+
+  .grid-wrapper {
+    margin: auto;
   }
 }
