--- a/ultimate-tic-tac-toe/src/components/Modal.css
+++ b/ultimate-tic-tac-toe/src/components/Modal.css
@@ -48,7 +48,7 @@
 [id^="modal-"] button {
   padding: 0px 5px;
   border-radius: 5px;
-  margin-bottom: 5px;
+  margin: 0 2em 5px 2em;
 }
 
 #modal-generic {
