--- a/ultimate-tic-tac-toe/src/components/GamePanel.css
+++ b/ultimate-tic-tac-toe/src/components/GamePanel.css
@@ -89,6 +89,31 @@ main {
   flex-direction: row;
 }
 
+.div-symbol {
+  display: flex;
+  flex-direction: row;
+  width: auto;
+  height: 20px;
+}
+
+.div-symbol p {
+  margin: 0;
+}
+
+.X-mini {
+  width: 1.1em;
+  height: 1.1em;
+  margin: auto 0.4em;
+  transition: 0.3s;
+}
+
+.O-mini {
+  width: 2em;
+  height: 2em;
+  margin-top: -.25em;
+  transition: 0.3s;
+}
+
 /*=================== 
     Media Queries 
 ===================*/
@@ -122,7 +147,7 @@ main {
   }
 
   .playersInfo p {
-    font-size: .9em;
+    font-size: 0.9em;
   }
 
   .playersInfo .title {
@@ -150,13 +175,13 @@ main {
   }
 
   .playersInfo p {
-    font-size: .9em;
+    font-size: 0.9em;
   }
 
   .playersInfo .title {
     font-size: 1.1em;
   }
-  
+
   .container {
     width: 100%;
     height: 100%;
@@ -176,13 +201,13 @@ main {
   }
 
   .playersInfo p {
-    font-size: .9em;
+    font-size: 0.9em;
   }
 
   .playersInfo .title {
     font-size: 1.1em;
-  }  
-  
+  }
+
   .playersInfo {
     width: 90%;
     margin: auto;
