--- a/ultimate-tic-tac-toe/src/components/GamePanel.css
+++ b/ultimate-tic-tac-toe/src/components/GamePanel.css
@@ -132,7 +132,7 @@ main {
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 800px) {
   .box {
     grid-template-columns: repeat(3, [col] 35px);
     grid-template-rows: repeat(3, [row] 35px);
@@ -155,16 +155,17 @@ main {
   }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 730px) {
   main {
     flex-direction: column;
     justify-content: center;
     margin: auto;
+    width: 80%;
   }
 
   .box {
-    grid-template-columns: repeat(3, [col] 38px);
-    grid-template-rows: repeat(3, [row] 38px);
+    grid-template-columns: repeat(3, [col] 35px);
+    grid-template-rows: repeat(3, [row] 35px);
     transition: 1s;
   }
 
@@ -179,14 +180,14 @@ main {
   }
 
   .playersInfo .title {
-    font-size: 1.1em;
+    font-size: 1em;
   }
 
   .container {
     width: 100%;
     height: 100%;
-    padding: 1em;
     margin: auto;
+    padding: 0 1em;
   }
 
   .grid-wrapper {
@@ -196,8 +197,8 @@ main {
 
 @media (max-width: 550px) {
   .box {
-    grid-template-columns: repeat(3, [col] 35px);
-    grid-template-rows: repeat(3, [row] 35px);
+    grid-template-columns: repeat(3, [col] 32px);
+    grid-template-rows: repeat(3, [row] 32px);
   }
 
   .playersInfo p {
@@ -205,11 +206,11 @@ main {
   }
 
   .playersInfo .title {
-    font-size: 1.1em;
+    font-size: 1em;
   }
 
   .playersInfo {
-    width: 90%;
+    width: 100%;
     margin: auto;
   }
 }
