--- a/ultimate-tic-tac-toe/src/App.css
+++ b/ultimate-tic-tac-toe/src/App.css
@@ -4,36 +4,44 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
-    line-height: 1.5em;
+  box-sizing: border-box;
+  line-height: 1.5em;
 }
 
-html, body {
-    margin: 0;
-    min-height: 760px;
+html,
+body {
+  margin: 0;
+  min-height: 760px;
 }
 
 html {
-    font-size: 16px;
-    scroll-behavior: smooth;
-    -webkit-text-size-adjust: 100%;
-    overflow: auto;
+  font-size: 16px;
+  scroll-behavior: smooth;
+  -webkit-text-size-adjust: 100%;
+  overflow: auto;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    font-family: "Open Sans", sans-serif;
-    background-color: #f7f7f7;
-    overflow: hidden;
-
+  display: flex;
+  flex-direction: column;
+  font-family: "Open Sans", sans-serif;
+  background-color: #f7f7f7;
+  overflow: hidden;
 }
 
 #root {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    height: 100vh;
-    min-height: 760px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  height: 100vh;
+  min-height: 760px;
+}
+
+.background-red {
+  background-color: rgba(219, 0, 0, 0.58);
+}
+
+.background-white {
+  background-color: white;
 }
