--- a/ultimate-tic-tac-toe/src/components/GamePanel.css
+++ b/ultimate-tic-tac-toe/src/components/GamePanel.css
@@ -115,6 +115,11 @@ main {
   transition: 0.3s;
 }
 
+.arrow-selected {
+  background-color:rgba(137, 255, 172, .85);
+  transition: 0.3s;
+}
+
 /*=================== 
     Media Queries 
 ===================*/
