--- a/ultimate-tic-tac-toe/src/components/game-panel/game-panel.css
+++ b/ultimate-tic-tac-toe/src/components/game-panel/game-panel.css
@@ -110,6 +110,10 @@ main {
   -o-animation: bg .5s ease-in;
 }
 
+.red-text {
+  color: red;
+}
+
 @keyframes bg {
   0% {
     background-color: rgba(137, 255, 172, 1);
