--- a/ultimate-tic-tac-toe/src/assets/styles/App.css
+++ b/ultimate-tic-tac-toe/src/assets/styles/App.css
@@ -12,6 +12,7 @@ html,
 body {
   margin: 0;
   min-height: 760px;
+  min-width: 360px;
 }
 
 html {
@@ -35,6 +36,4 @@ body {
   flex-wrap: nowrap;
   justify-content: space-between;
   height: 100vh;
-  min-width: 100%;
-  min-height: 760px;
 }
