--- a/ultimate-tic-tac-toe/src/components/players-info/players-info.css
+++ b/ultimate-tic-tac-toe/src/components/players-info/players-info.css
@@ -1,7 +1,8 @@
 .playersInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   width: 33%;
-  margin: auto;
-  padding: 1.5em 0;
 }
 
 .playersInfo p {
@@ -9,10 +10,10 @@
   color: rgb(82, 82, 82);
 }
 
-.playersInfo p span{
+.playersInfo p span {
   transition: 1s;
   font-weight: normal;
-  color: rgb(0,0,0);
+  color: rgb(0, 0, 0);
 }
 
 .playersInfo .title {
@@ -20,31 +21,18 @@
   line-height: 1em;
   font-weight: bolder;
   font-size: larger;
-  color: rgb(0,0,0);
+  color: rgb(0, 0, 0);
 }
 
 /*=================== 
     Media Queries 
 ===================*/
-
-@media (max-width: 800px) {
-  .playersInfo {
-    width: 85%;
-  }
-
-  .playersInfo .title {
-    font-size: 1.1em;
-  }
-
-  .playersInfo p {
-    font-size: 0.9em;
-  }
-}
-
 @media (max-width: 730px) {
   .playersInfo {
-    display: flex;
     flex-direction: row;
+    width: 100%;
+    margin: auto;
+    margin-top: 1.5em;
   }
 
   .playersInfo p {
@@ -59,11 +47,15 @@
     width: auto;
     height: 100%;
     margin: auto;
-    padding: 0 1em;
   }
 }
 
 @media (max-width: 550px) {
+  .playersInfo {
+    width: 100%;
+    margin-bottom: -1em;
+  }
+
   .playersInfo p {
     font-size: 0.9em;
   }
@@ -71,14 +63,9 @@
   .playersInfo .title {
     font-size: 1em;
   }
-
-  .playersInfo {
-    width: 100%;
-    margin: auto;
-  }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
   .playersInfo p {
     font-size: 0.8em;
   }
