--- a/ultimate-tic-tac-toe/src/assets/styles/App.css
+++ b/ultimate-tic-tac-toe/src/assets/styles/App.css
@@ -12,7 +12,7 @@ html,
 body {
   margin: 0;
   height: 100%;
-  min-height: 780px;
+  min-height: 760px;
   min-width: 360px;
 }
 
@@ -40,4 +40,11 @@ body {
   height: 100%;
   width: 100%;
   margin: 0;
+}
+
+@media (max-width: 600px) {
+  html,
+  body {
+    min-height: 785px;
+  }
 }
